# magicp2p

./: Cargo.toml  LICENSE  Makefile  README.md  debug.sh
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
simple/: Cargo.toml
simple/src/: main.rs
src/: behaviour.rs  dht.rs  discovory.rs  events.rs  lib.rs  main.rs  network.rs  socket.rs
