[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
cursive = "0.21.1"
libp2p = { version = "0.56", features = ["quic", "tokio", "request-response", "cbor"] }
tokio = { version = "1.46.1", features = ["full"] }
magicp2p = { path = "../" }
scanf = "2.0.0"
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["env-filter"] }