[package]
name = "simple"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
futures = "0.3.31"
libp2p = { version = "0.56", features = ["noise", "dns", "tokio", "yamux", "tcp", "kad", "macros", "identify", "quic", "relay", "dcutr", "autonat"] }
libp2p-identity = { version = "0.2.12", features = ["ed25519", "peerid", "rsa"] }
tokio = { version = "1.46.1", features = ["full"] }
